<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btnAddUser"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/add_user"
        app:showAsAction="never"/>

    <item
        android:id="@+id/btnDeleteUser"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/remove_user"
        app:showAsAction="never" />

    <item
        android:id="@+id/btnDeleteGroup"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/delete_group"
        app:showAsAction="never" />
    <item
        android:id="@+id/btnClearHistory"
        android:icon="@drawable/ic_round_more_vert_24"
        android:title="@string/clear_history"
        app:showAsAction="never" />

</menu>