<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewBgDialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/_220sdp"
            android:background="@drawable/bg_square_round_corner"
            android:backgroundTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <ImageView
            android:id="@+id/imgGroupIcon"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:contentDescription="@string/contDesc"
            android:src="@drawable/img_add_user"
            app:layout_constraintEnd_toStartOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/edtUserId"
            app:layout_constraintTop_toTopOf="@id/viewBgDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:letterSpacing="0.05"
            android:text="@string/add_user"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toEndOf="@id/imgGroupIcon"
            app:layout_constraintTop_toTopOf="@id/imgGroupIcon" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserId"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_square"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:hint="@string/email_id"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edtUserName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_35sdp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:background="@drawable/bg_square"
            android:fontFamily="@font/sf_pro_rounded_regular"
            android:hint="@string/username"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="15"
            android:maxLines="1"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:textColor="@color/grey_dark"
            android:textColorHint="@color/grey"
            android:textCursorDrawable="@drawable/cursor"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toBottomOf="@id/edtUserId" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBgDialog"
            app:layout_constraintEnd_toStartOf="@id/btnAddUser"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnAddUser"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBgDialog"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toEndOf="@id/btnCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>