<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewBgDialog"
            android:layout_width="0dp"
            android:layout_height="@dimen/_160sdp"
            android:background="@drawable/bg_square_round_corner"
            android:backgroundTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.8" />

        <ImageView
            android:id="@+id/imgDialogIcon"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:contentDescription="@string/contDesc"
            android:src="@drawable/img_dialog_alert"
            app:layout_constraintBottom_toTopOf="@id/viewBgDialog"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toTopOf="@id/viewBgDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/alert"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toBottomOf="@id/imgDialogIcon" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtMsg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_pro_rounded_semibold"
            android:gravity="center"
            android:letterSpacing="0.05"
            android:text="@string/remove_user_msg"
            android:textColor="@color/dialog_msg_text"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="@id/txtTitle"
            app:layout_constraintStart_toStartOf="@id/txtTitle"
            app:layout_constraintTop_toBottomOf="@id/txtTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn1"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_square"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/create"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBgDialog"
            app:layout_constraintEnd_toStartOf="@id/btn2"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btn2"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:background="@drawable/bg_square"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBgDialog"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toEndOf="@id/btn1" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>