<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/img_intro"
            app:layout_constraintDimensionRatio="h,1:1.2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/ic_main_bg_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:gravity="center"
            android:letterSpacing="0.04"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/txtInfo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/bg_bottom"
            app:layout_constraintVertical_bias="0.37"
            app:layout_constraintVertical_chainStyle="packed" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sf_pro_rounded_medium"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:text="@string/your_colleague_waiting"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/txtWelcome"
            app:layout_constraintTop_toBottomOf="@id/txtWelcome" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgPeopleList"
            android:layout_width="@dimen/_60sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:src="@drawable/img_people_list"
            app:layout_constraintBottom_toBottomOf="@id/txtInfo"
            app:layout_constraintStart_toEndOf="@id/txtInfo"
            app:layout_constraintTop_toTopOf="@id/txtInfo" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnGetStarted"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_70sdp"
            android:background="@drawable/bg_square"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:paddingStart="@dimen/_15sdp"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_15sdp"
            android:paddingBottom="@dimen/_5sdp"
            android:text="@string/get_started"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLoginAsAdmin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:gravity="center"
            android:letterSpacing="0.03"
            android:padding="@dimen/_5sdp"
            android:text="@string/login_as_admin"
            android:textColor="@color/green"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/btnGetStarted"
            app:layout_constraintTop_toBottomOf="@id/btnGetStarted" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>