<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/viewBgDialog"
            android:layout_width="0dp"
            android:layout_height="370dp"
            android:background="@drawable/bg_square_round_corner"
            android:backgroundTint="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <ImageView
            android:id="@+id/imgDialogIcon"
            android:layout_width="@dimen/_70sdp"
            android:layout_height="@dimen/_70sdp"
            android:contentDescription="@string/contDesc"
            android:src="@drawable/img_dialog_delete"
            app:layout_constraintBottom_toTopOf="@id/viewBgDialog"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toTopOf="@id/viewBgDialog" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtSelectGroupIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/sf_pro_rounded_heavy"
            android:letterSpacing="0.05"
            android:text="@string/select_user_for_remove"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog"
            app:layout_constraintTop_toBottomOf="@id/imgDialogIcon" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerGroupIcon"
            android:layout_width="0dp"
            android:layout_height="@dimen/_170sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:overScrollMode="never"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toEndOf="@id/txtSelectGroupIcon"
            app:layout_constraintStart_toStartOf="@id/txtSelectGroupIcon"
            app:layout_constraintTop_toBottomOf="@id/txtSelectGroupIcon"
            tools:listitem="@layout/list_item_user" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/bg_square"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/cancel"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/viewBgDialog"
            app:layout_constraintEnd_toEndOf="@id/viewBgDialog"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="@id/viewBgDialog" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>