<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_main">

        <View
            android:id="@+id/bg_bottom"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/ic_main_bg_shape"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.45"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/img_login"
            app:layout_constraintDimensionRatio="h,1:1.05"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pwdLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@id/pwdLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imgLogo"
            app:layout_constraintVertical_bias="0.4"
            app:layout_constraintWidth_percent="0.8"
            app:passwordToggleDrawable="@drawable/toggle_password_drawable"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPassWord"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_square"
                android:drawableStart="@drawable/ic_lock_dark"
                android:drawablePadding="@dimen/_15sdp"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:hint="@string/new_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="@color/grey_dark"
                android:textColorHint="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/reEnterPwdLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            app:hintAnimationEnabled="false"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="@id/pwdLayout"
            app:layout_constraintStart_toStartOf="@id/pwdLayout"
            app:layout_constraintTop_toBottomOf="@id/pwdLayout"
            app:passwordToggleDrawable="@drawable/toggle_password_drawable"
            app:passwordToggleEnabled="true">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtReEnterPassWord"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@drawable/bg_square"
                android:drawableStart="@drawable/ic_lock_dark"
                android:drawablePadding="@dimen/_15sdp"
                android:ellipsize="end"
                android:fontFamily="@font/sf_pro_rounded_regular"
                android:hint="@string/confirm_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:paddingStart="@dimen/_15sdp"
                android:paddingEnd="@dimen/_15sdp"
                android:singleLine="true"
                android:textColor="@color/grey_dark"
                android:textColorHint="@color/grey" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnUpdate"
            android:layout_width="@dimen/_110sdp"
            android:layout_height="@dimen/_40sdp"
            android:background="@drawable/bg_square"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/sf_pro_rounded_bold"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:text="@string/update"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pwdLayout" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>